# HMi

./: .gitignore  CMakeLists.txt  README.md  VideoCallModule_README.md  agent-transformation-plan.md  ai_callback_flow.mmd  ai_interaction_flow.mmd  api-interfaces.txt  architecture.md  callback_detailed_flow.mmd  callback_execution_flow.mmd  config.template.ini  main.cpp  qml.qrc  start.bat
NetworkManager/: NetworkManager.cpp  NetworkManager.h
OpenGLRender/: CarQt3DView.cpp  CarQt3DView.h
QML/AIPanel/: AIPanel.qml  SceneEngineTest.qml
QML/BottomControls/: BottomControls.qml
QML/Car3DPanel/: Car3DPanel.qml
QML/CarPanel/: CarPanel.qml
QML/DashboardPanel/: DashboardPanel.qml
QML/HMIBackground/: HMIBackground.qml
QML/MAIN/: main.qml
QML/MapPanel/: MapPanel.qml  map.html
QML/MusicPanel/: MusicPanel.qml
QML/ProgressBar/: ProgressBar.qml
QML/Sidebar/: Sidebar.qml
QML/SpeedGauge/: SpeedGauge.qml
QML/StatusBar/: StatusBar.qml
QML/VideoCallPanel/: VideoCallWindow.qml
Service/AgentCore/: AgentLoop.cpp  AgentLoop.h  AgentTool.h  MemoryManager.cpp  MemoryManager.h  ToolExecutor.h  ToolRegistry.h
Service/AudioService/: AudioService.cpp  AudioService.h
Service/ConfigReader/: ConfigReader.cpp  ConfigReader.h
Service/DataBus/: DataBus.cpp  DataBus.h
Service/DeepSeekService/: DeepSeekService.cpp  DeepSeekService.h
Service/LLMService/: LLMService.cpp  LLMService.h
Service/LocationService/: LocationService.cpp  LocationService.h
Service/LogService/: LogService.cpp  LogService.h  LogService_global.h
Service/MapService/: MapService.cpp  MapService.h
Service/MusicService/: MusicService.cpp  MusicService.h
Service/RateLimitedService/: RateLimitedService.cpp  RateLimitedService.h
Service/SceneEngine/: SceneDataTypes.h  SceneEngine.cpp  SceneEngine.h
Service/TimeService/: TimeService.cpp  TimeService.h
Service/Tools/: ClimateTool.h  MusicTool.h  NavigationTool.h  TimeTool.h  WeatherTool.h
Service/VideoCallService/: VideoCallService.cpp  VideoCallService.h  VideoRenderer.cpp  VideoRenderer.h
Service/WeatherService/: WeatherService.cpp  WeatherService.h
